# docs/api.yml
@@ -138,6 +138,54 @@ paths:
       tags:
         - user
 
+  /get-my-orders:
+    get:
+      summary: 获取当前用户发布的所有订单信息
+      description: 获取当前用户所有订单信息
+      security:
+        - APIKeyHeader: []
+      responses:
+        200:
+          description: 获取成功
+          properties:
+            msg:
+              type: string
+        400:
+          description: 获取失败
+          properties:
+            error_msg:
+              type: string
+      tags:
+        - user
+  
+  /get-orders/{user_id}/:
+    get:
+      summary: 获取用户id为user_id发布的所有订单信息
+      description: 获取用户id为user_id所有订单信息
+      parameters:
+        - in: path
+          name: user_id   # Note the name is the same as in the path
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: The user ID
+      security:
+        - APIKeyHeader: []
+      responses:
+        200:
+          description: 获取成功
+          properties:
+            msg:
+              type: string
+        400:
+          description: 获取失败
+          properties:
+            error_msg:
+              type: string
+      tags:
+        - user
+
   /create-posttag:
     post:
       summary: 发布需求帖
